Исправил баги с выводом видео